# ATL

./: .gitignore  BasicImmeriveMode.apk  Makefile  README.md  demo_app.apk  launch_activity.sh  launch_activity.sh.in  launch_activity_apitrace.sh  launch_activity_gdb.sh  launch_activity_vg.sh  meson.build
src/ARSCLib/: README.md  meson.build
src/ARSCLib/android/util/: AttributeSet.java
src/api-impl/: meson.build
src/api-impl/android/: R.java
src/api-impl/android/accounts/: AccountManager.java
src/api-impl/android/animation/: Animator.java  AnimatorInflater.java  AnimatorListenerAdapter.java  AnimatorSet.java  ArgbEvaluator.java  LayoutTransition.java  ObjectAnimator.java  PropertyValuesHolder.java  StateListAnimator.java  TypeEvaluator.java  ValueAnimator.java
src/api-impl/android/annotation/: AnimRes.java  AnimatorRes.java  AnyRes.java  ArrayRes.java  BoolRes.java  ColorRes.java  DimenRes.java  DrawableRes.java  FractionRes.java  IdRes.java  IntDef.java  IntegerRes.java  InterpolatorRes.java  LayoutRes.java  MenuRes.java  PluralsRes.java  RawRes.java  StringDef.java  StringRes.java  StyleRes.java  StyleableRes.java  SystemApi.java  XmlRes.java
src/api-impl/android/app/: Activity.java  ActivityManager.java  ActivityThread.java  AlarmManager.java  AlertDialog.java  AppOpsManager.java  Application.java  ApplicationErrorReport.java  DatePickerDialog.java  Dialog.java  DownloadManager.java  Fragment.java  FragmentManager.java  FragmentTransaction.java  IntentService.java  KeyguardManager.java  ListActivity.java  NativeActivity.java  Notification.java  NotificationChannel.java  NotificationChannelGroup.java  NotificationManager.java  PendingIntent.java  ProgressDialog.java  RemoteInput.java  SearchManager.java  Service.java  SharedElementCallback.java  SharedPreferencesImpl.java  UiModeManager.java  WallpaperManager.java
src/api-impl/android/appwidget/: AppWidgetManager.java  AppWidgetProvider.java
src/api-impl/android/bluetooth/: BluetoothManager.java  BluetoothProfile.java
src/api-impl/android/content/: ActivityNotFoundException.java  BroadcastReceiver.java  ClipData.java  ClipboardManager.java  ComponentName.java  ContentProvider.java  ContentResolver.java  ContentUris.java  ContentValues.java  Context.java  ContextWrapper.java  DialogInterface.java  Intent.java  IntentFilter.java  IntentSender.java  SearchRecentSuggestionsProvider.java  ServiceConnection.java  UriMatcher.java
src/api-impl/android/database/: AbstractCursor.java  AbstractWindowedCursor.java  CharArrayBuffer.java  ContentObservable.java  ContentObserver.java  CrossProcessCursor.java  Cursor.java  CursorIndexOutOfBoundsException.java  CursorWindow.java  CursorWrapper.java  DataSetObservable.java  DatabaseUtils.java  DefaultDatabaseErrorHandler.java  MatrixCursor.java  Observable.java  SQLException.java
src/api-impl/android/gesture/: GestureOverlayView.java  GestureStore.java
src/api-impl/android/graphics/: Bitmap.java  BitmapFactory.java  BitmapShader.java  Canvas.java  Color.java  ColorFilter.java  ColorMatrix.java  GskCanvas.java  LinearGradient.java  Matrix.java  Paint.java  Path.java  PathEffect.java  PathMeasure.java  Point.java  PointF.java  PorterDuff.java  PorterDuffColorFilter.java  PorterDuffXfermode.java  Rect.java  RectF.java  Region.java  Shader.java  Typeface.java  Xfermode.java
src/api-impl/android/hardware/: Sensor.java  SensorEvent.java  SensorEventListener.java  SensorManager.java
src/api-impl/android/location/: Criteria.java  Location.java  LocationListener.java  LocationManager.java
src/api-impl/android/media/: AudioAttributes.java  AudioManager.java  AudioTrack.java  MediaCodec.java  MediaCodecInfo.java  MediaCodecList.java  MediaDescription.java  MediaFormat.java  MediaMetadata.java  MediaPlayer.java  MediaRouter.java  Ringtone.java  RingtoneManager.java  SoundPool.java
src/api-impl/android/net/: ConnectivityManager.java  Network.java  NetworkInfo.java  SSLSessionCache.java  TrafficStats.java  Uri.java  UriCodec.java
src/api-impl/android/nfc/: NfcManager.java
src/api-impl/android/opengl/: GLES20.java  GLSurfaceView.java  Matrix.java
src/api-impl/android/os/: AsyncTask.java  BaseBundle.java  Binder.java  Build.java  Bundle.java  CancellationSignal.java  ConditionVariable.java  Debug.java  DropBoxManager.java  Environment.java  FileObserver.java  Handler.java  HandlerThread.java  IBinder.java  IMessenger.java  LocaleList.java  Looper.java  MemoryFile.java  Message.java  MessageQueue.java  Messenger.java  OperationCanceledException.java  Parcel.java  ParcelFileDescriptor.java  Parcelable.java  PatternMatcher.java  PersistableBundle.java  PowerManager.java  Process.java  RemoteCallbackList.java  StatFs.java  StrictMode.java  SystemClock.java  SystemProperties.java  Trace.java  UserHandle.java  UserManager.java  Vibrator.java
src/api-impl/android/preference/: PreferenceManager.java
src/api-impl/android/provider/: BaseColumns.java  ContactsContract.java  Settings.java
src/api-impl/android/telephony/: CellLocation.java  PhoneNumberUtils.java  PhoneStateListener.java  SubscriptionManager.java  TelephonyManager.java
src/api-impl/android/text/: ClipboardManager.java  Editable.java  Html.java  InputFilter.java  Layout.java  Selection.java  SpanWatcher.java  SpannableStringBuilder.java  SpannableStringInternal.java  StaticLayout.java  TextDirectionHeuristic.java  TextDirectionHeuristics.java  TextPaint.java  TextUtils.java  TextWatcher.java
src/api-impl/android/util/: AndroidException.java  AndroidRuntimeException.java  ArrayMap.java  AttributeSet.java  Base64.java  DecompiledXmlResourceParser.java  DisplayMetrics.java  JsonReader.java  JsonToken.java  JsonWriter.java  Log.java  LruCache.java  MapCollections.java  Pair.java  Property.java  Size.java  Slog.java  SparseBooleanArray.java  StateSet.java  TypedValue.java  Xml.java  XmlPullAttributes.java
src/api-impl/android/view/: AbsSavedState.java  ActionMode.java  AnimationSet.java  Choreographer.java  ContextThemeWrapper.java  Display.java  GestureDetector.java  Gravity.java  (+32 more)
src/arsc_parser/: meson.build
(+551 files in other folders)
